<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ClientSetupActivity">

    <ProgressBar
        android:id="@+id/client_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/client_setup_image"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="75dp"
        android:scaleType="centerCrop"
        android:src="@drawable/default_profile"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:id="@+id/names_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:orientation="horizontal"
        android:layout_below="@id/client_setup_image"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firstname"
                android:textSize="14sp"
                android:textColor="@color/DarkSlateGray"/>

            <EditText
                android:id="@+id/client_first_name"
                android:focusedByDefault="false"
                android:textSize="15sp"
                android:inputType="textPersonName"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lastname"
                android:textSize="14sp"
                android:textColor="@color/DarkSlateGray"/>

            <EditText
                android:id="@+id/client_last_name"
                android:focusedByDefault="false"
                android:textSize="15sp"
                android:inputType="textPersonName"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/phone_layout"
        android:layout_below="@id/names_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/DarkSlateGray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_autoFormatNumber="true"
                app:ccpDialog_showNameCode="false"
                app:ccp_textGravity="LEFT"
                app:ccp_showFullName="false"
                app:ccp_showPhoneCode="true"
                app:ccp_showNameCode="false"
                app:ccp_showFlag="true"
                app:ccp_defaultNameCode="KE"
                app:ccp_useFlagEmoji="true"/>

            <EditText
                android:id="@+id/client_phone"
                android:focusedByDefault="false"
                android:textSize="15sp"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_below="@id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        >

        <Button
            android:id="@+id/client_setup_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="2.5dp"
            android:layout_marginEnd="2.5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/White"
            android:backgroundTint="@color/DarkSlateGray"
            android:text="@string/submit"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/client_logout_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="2.5dp"
            android:layout_marginStart="2.5dp"
            android:textColor="@color/White"
            android:backgroundTint="@color/DarkSlateGray"
            android:text="@string/logout"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</RelativeLayout>